Sat Jan 21 13:33:00 PST 2006 William Brack

	* src/ Makefile.am, newconfig.c, motion.c: commented out areas
	  requiring webhttpd until Version 4 conversion gets further.
	* src/ dummymotion.h, fudge.h: removed from CVS
	* src/newconfig.c: (temporarily) added a new runtime option to
	  motion: -z {filename}.  If set, causes the (processed) config
	  data to be dumped out to {filename}.  This is useful for
	  testing the new configuration code.
	* src/ motion.c, newconfig.c, newconfig.h and plugins/v4l_plugin.c,
	  netcam_plugin.c, v4l_plugin.h, netcam_plugin.h, v4l_params.h,
	  netcam_params.h, netcam_jpeg.c, netcam_wget.c: enhanced source
	  formatting to please Lavr :-)
	  
Fri Jan 20 22:55:00 PST 2006 William Brack <wbrack@mmm.com.hk>

	* changed all occurences of "ctxt_ptr" to be "motion_ctxt_ptr"
	  (many modules in both src and plugins)

Fri Jan 20 11:25:00 PST 2006 William Brack <wbrack@mmm.com.hk>

	* src/newconfig.c: Added code to set the default plugin path
	  if no path is specified on the "plugin" config param.

Fri Jan 20 10:03:00 PST 2006 William Brack <wbrack@mmm.com.hk>

	* src/ motion.h, motion.c: re-located video_params out of
	  context->video_ctxt (which was a pointer to static data),
	  into context->video_vars (which was previously named
	  video_plugin_ctxt).
	* plugins/ v4l_plugin.c, netcam_plugin.c: updated for the
	  above change.

Thu Jan 19 18:05:00 PST 2006 William Brack <wbrack@mmm.com.hk>

	* CHANGELOG: removed from CVS
	* motion_version.h.in: new file, contains #define for
	  current version
	* Makefile.am: added above file to EXTRA_DIST
	* src/Makefile.am, plugins/Makefile.am: minor change for
	  setting defines for SYSCONFIG and PLUGINDIR into AM_CFLAGS
	* src/motion.h: added include of motion_version.h
	* src/ newconfig.c, webcam.c, webhttpd.c: minor change to use
	  the newly defined SYSCONFIG and MOTION_VERSION_STRING.  Note
	  that PLUGINDIR will be used within newconfig.c for the