@@ -1,3 +1,8 @@
+Sun Jan 22 09:15:00 PST 2006 William Brack
+
+	* src/newconfig.c: further enhancement for the "dump" routine,
+	  fixing problem with 'range' and printing section headers.
+
 Sat Jan 21 13:33:00 PST 2006 William Brack
 
 	* src/ Makefile.am, newconfig.c, motion.c: commented out areas
